[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "whichpn"
dynamic = ["version"]
description = "Phone number provider search"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "TI_Eugene", email = "ti.eugene@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Operating System :: OS Independent",
]
dependencies = [
  "Django"
]
urls.Homepage = "https://github.com/tieugene/whichpn"
urls.Source = "https://github.com/tieugene/whichpn"

[tool.setuptools]
packages = ["whichpn"]

[tool.setuptools.dynamic]
version = {attr = "whichpn.__version__"}

[tool.pep8]
max-line-length = "120"

[tool.flake8]
max-line-length = 120

[tool.pylint]
max-line-length = 120
disable = [
  "W0511",  # `to do` keywords
]
